fixed logo size on safari

--- a/public/styles/globals.css
+++ b/public/styles/globals.css
@@ -372,6 +372,11 @@
     margin: var(--margin-small);
     margin-top: 0;
   }
+
+  .svg-icon {
+    width: inherit;
+    height: inherit;
+  }
   
   .description {
     margin: var(--margin-small);
